--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vercel --prod"
   },
   "devDependencies": {
     "vite": "^2.7.2"
   },
   "dependencies": {
-    "three": "^0.135.0"
+    "three": "^0.135.0",
+    "vercel": "^23.1.2"
   }
 }
