--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "vite": "^2.7.2"
   },
   "dependencies": {
+    "gsap": "^3.9.0",
+    "lil-gui": "^0.15.0",
     "three": "^0.135.0",
     "vercel": "^23.1.2"
   }
